--- a/nest-service/.env.sample
+++ b/nest-service/.env.sample
@@ -1,3 +1,3 @@
-MONGO_DB_URL=
-RMQ_URL=
-SERVICE_QUEUE_NAME=
+MONGO_DB_URL=mongodb://db:27017/test
+RMQ_URL=amqp://myuser:mypassword@rabbitmq3:5672
+SERVICE_QUEUE_NAME=product
